[metadata]
license_file = LICENSE
name = snvoter-test
version = 0.0.1
author = Vahid Akbari
author_email = vakbari@bcgsc.ca
description = A top up tool to enhance SNV calling from Nanopore sequencing data.
long_description = file:README.md
long_description_content_type = text/markdown
project_urls =
    BCGSC bitbucket = https://svn.bcgsc.ca/bitbucket/users/vakbari/repos/snvoter/browse
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS
    Operating System :: Unix
    Operating System :: POSIX :: Linux

[options]
packages = snvoter
python_requires = >=3.7
install_requires =
    numpy >= 1.17.2
    pandas >= 1.0.3
    pysam >= 0.15.4
    tqdm >= 4.36.1
    scikit-learn == 0.21.3
    tensorflow == 2.1.0
    scipy == 1.4.1
    keras == 2.2.4
    matplotlib >= 3.3.0
    multiprocess >= 0.70.10

[options.entry_points]
console_scripts =
    snvoter = snvoter.__main__:main
