[metadata]
license_file = LICENSE
name = snvoter
version = 0.0
author = Vahid Akbari
author_email = vakbari@bcgsc.ca
description = A top up tool to enhance SNV calling from Nanopore sequencing data.
long_description = file:README.md
long_description_content_type = text/markdown
project_urls =
    GitHub = https://github.com/vahidAK/SNVoter
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Unix
    Operating System :: POSIX :: Linux

[options]
packages = snvoter
python_requires = >=3.7
install_requires =
    numpy >= 1.16.0, < 1.19.0
    pandas >= 1.0.3
    pysam >= 0.15.4
    tqdm >= 4.36.1
    tensorflow >= 2.1.0
    keras >= 2.2.4
    matplotlib >= 3.3.0
    multiprocess >= 0.70.10
    scikit-learn >= 0.21.3

[options.entry_points]
console_scripts =
    snvoter = snvoter.__main__:main
